[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/DejaVuSansMono.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_right = 224.0
margin_bottom = 184.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 192.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Balar's Awakening"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 192.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6
alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 192.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Start"
icon_align = 1

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 192.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Options"
icon_align = 1

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 192.0
margin_bottom = 81.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Credits"
icon_align = 1

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 192.0
margin_bottom = 110.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Quit"
icon_align = 1
